# mlops_oracle_mnist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  config_cpu.yaml  config_gpu.yaml  pyproject.toml  requirements.txt  requirements_backend.txt  requirements_dev.txt  requirements_frontend.txt  requirements_test.txt  tasks.py
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/training/: devcontainer.json
.github/workflows/: tests.yaml
configs/: config.yaml  config_foo.yaml  sweep_config.yaml
data/: .gitignore
dockerfiles/: api.dockerfile  backend-dev.dockerfile  backend.dockerfile  cloudtrain.dockerfile  dev.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
outputs/2025-01-10/13-35-55/.hydra/: hydra.yaml
outputs/2025-01-10/13-36-41/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-10/13-38-49/.hydra/: hydra.yaml
outputs/2025-01-10/13-39-17/.hydra/: hydra.yaml
outputs/2025-01-10/13-40-54/.hydra/: hydra.yaml
profiling/: profile_output.prof  profiler.ipynb
reports/: README.md
src/oracle_mnist/: api.py  data.py  frontend.py  model.py  train.py  train_profile.py  train_sweep.py  visualize.py
src/oracle_mnist/modules/: train_module.py
src/oracle_mnist/schedular/: sarpiv_scheduler.py
src/oracle_mnist/scheduler/: sarphiv_scheduler.py
src/oracle_mnist/utils/: api_utils.py  data_utils.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_api.py
tests/unittests/: test_data.py  test_model.py
(+16 files in other folders)
