[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle_mnist"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "team19", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic.optional-dependencies]
train = {file = ["requirements.txt"]}
dev = {file = ['requirements_dev.txt']}
backend = {file = ['requirements_backend.txt']}

[tool.flake8]
max-line-length = 110

[tool.black]
line-length = 110

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]


[project.scripts]
preprocess = "oracle_mnist.data:preprocess"
train = "oracle_mnist.train:main"
evaluate = "oracle_mnist.evaluate:main"
visualize = "oracle_mnist.visualize:main"
